# FoodDeliverySystem-Microservices

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Docker/: Dockerfile.mongo  Dockerfile.rabbitmq  Dockerfile.redis  Dockerfile.vault  docker-compose.yaml
OrderService/: db_url_creator.py  queue_test_receiver.py  queue_test_sender.py  redis_order_viewer.py  redis_url_cleaner.py  response_test_sender.py  run.py
OrderService/src/business/: documentation.py  models.py  request_handler.py  response_handler.py
OrderService/src/core/: .env  security.py  setup.py
OrderService/src/repository/: db.py  documentation.py  interface.py  models.py  mongo_repository.py  order_db_adapter.py  unit_of_work.py
OrderService/src/tools/: custom_logging.py  rabbit_client.py  url_cache.py
OrderService/src/web/: health_manager.py  main.py
OrderService/src/web/api/: api.py  documentation.py  health_route.py  models.py  order_api_adapter.py
PaymentService/: run.py
PaymentService/src/broker/: interface.py  unit_of_work.py
PaymentService/src/business/: models.py  payment_handler.py
PaymentService/src/core/: security.py  setup.py
PaymentService/src/repository/: db.py  documentation.py  interface.py  models.py  mongo_repository.py  payment_db_adapter.py  unit_of_work.py
PaymentService/src/services/: stripe_service.py
PaymentService/src/tools/: custom_logging.py  rabbit_client.py  url_cache.py
PaymentService/src/web/: health_manager.py
PaymentService/src/web/api/: api.py  payment_api_adapter.py
