[tool.poetry]
name = "food_delivery_microservices"
version = "0.1.0"
description = ""
authors = ["Riad"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
aio-pika = "9.4.1"
aiofiles = "23.2.1"
fastapi = "0.110.0"
httpx = "0.27.0"
loguru = "0.7.2"
motor = "3.3.2"
pydantic-settings = "2.2.1"
redis = {version = "5.0.3", extras = ["hiredis"]}
ujson = "5.9.0"
uuid7 = "0.1.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
